include_directories(../include)

set(SOURCE_FILES
        individual/crossover/OnePointCrossover.cpp
        individual/mutation/NumberMutation.cpp
        individual/Individual.cpp
        individual/Phenotype.cpp
        language/parser/BnfRuleParser.cpp
        language/symbol/NonTerminal.cpp
        language/symbol/Option.cpp
        language/symbol/Terminal.cpp
        language/ContextFreeGrammar.cpp
        language/ContextFreeMapper.cpp
        population/initializer/RandomInitializer.cpp
        population/reproducer/Reproducer.cpp
        population/selector/RouletteSelector.cpp
        population/selector/TournamentSelector.cpp
        population/Individuals.cpp
        population/Population.cpp
        util/bool_generator/TwisterBoolGenerator.cpp
        util/logger/NullLogger.cpp
        util/logger/StreamLogger.cpp
        util/number_generator/TwisterNumberGenerator.cpp
        util/helper.cpp
        Evolution.cpp
        ../include/gram/individual/crossover/Crossover.h
        ../include/gram/individual/crossover/OnePointCrossover.h
        ../include/gram/individual/mutation/Mutation.h
        ../include/gram/individual/mutation/NumberMutation.h
        ../include/gram/individual/Genotype.h
        ../include/gram/individual/Individual.h
        ../include/gram/individual/Phenotype.h
        ../include/gram/language/parser/RuleParser.h
        ../include/gram/language/parser/BnfRuleParser.h
        ../include/gram/language/symbol/NonTerminal.h
        ../include/gram/language/symbol/Option.h
        ../include/gram/language/symbol/Terminal.h
        ../include/gram/language/ContextFreeGrammar.h
        ../include/gram/language/ContextFreeMapper.h
        ../include/gram/language/Evaluator.h
        ../include/gram/language/Mapper.h
        ../include/gram/population/initializer/Initializer.h
        ../include/gram/population/initializer/RandomInitializer.h
        ../include/gram/population/reproducer/Reproducer.h
        ../include/gram/population/selector/IndividualSelector.h
        ../include/gram/population/selector/RouletteSelector.h
        ../include/gram/population/selector/TournamentSelector.h
        ../include/gram/population/Individuals.h
        ../include/gram/population/Population.h
        ../include/gram/util/bool_generator/BoolGenerator.h
        ../include/gram/util/bool_generator/TwisterBoolGenerator.h
        ../include/gram/util/logger/Logger.h
        ../include/gram/util/logger/NullLogger.h
        ../include/gram/util/logger/StreamLogger.h
        ../include/gram/util/number_generator/NumberGenerator.h
        ../include/gram/util/number_generator/TwisterNumberGenerator.h
        ../include/gram/util/helper.h
        ../include/gram/Evolution.h
        )

add_library(gram STATIC ${SOURCE_FILES})
